# agentic-comm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  INSTALL.md  Makefile  README.md  SECURITY.md  benchmark-context.txt  benchmark-output.txt  filesize-output.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-sdk-tests.yml  release.yml
crates/agentic-comm/: Cargo.toml  README.md
crates/agentic-comm-cli/: Cargo.toml  README.md
crates/agentic-comm-cli/src/: main.rs
crates/agentic-comm-ffi/: Cargo.toml  README.md
crates/agentic-comm-ffi/src/: lib.rs
crates/agentic-comm-mcp/: Cargo.toml  README.md
crates/agentic-comm-mcp/src/: ghost_bridge.rs  main.rs
crates/agentic-comm-mcp/src/config/: loader.rs  mod.rs
crates/agentic-comm-mcp/src/prompts/: affect_calibrate.rs  channel_health.rs  comm_status.rs  compose_message.rs  hive_decision.rs  mod.rs  registry.rs  semantic_extract.rs  thread_summary.rs
crates/agentic-comm-mcp/src/protocol/: compact.rs  handler.rs  mod.rs  stdio.rs
crates/agentic-comm-mcp/src/resources/: mod.rs  registry.rs
crates/agentic-comm-mcp/src/session/: manager.rs  mod.rs
crates/agentic-comm-mcp/src/tools/: communication_log.rs  invention_affect.rs  invention_collaboration.rs  invention_federation.rs  invention_forensics.rs  invention_semantics.rs  invention_temporal.rs  mod.rs  registry.rs  validation.rs
crates/agentic-comm-mcp/src/types/: error.rs  mod.rs  request.rs  response.rs
crates/agentic-comm-mcp/tests/: edge_cases_inventions.rs
crates/agentic-comm/benches/: comm_benchmarks.rs
crates/agentic-comm/src/: affect.rs  bridges.rs  channel.rs  contracts.rs  crypto.rs  encryption.rs  format.rs  lib.rs  query.rs  semantic.rs  temporal.rs  types.rs  workspace.rs
crates/agentic-comm/src/query/: budget.rs  delta.rs  mod.rs
crates/agentic-comm/tests/: conservation_test.rs  filesize_measurement.rs  integration_advanced.rs  integration_tests.rs  memory_profiling.rs  pipeline_tests.rs  sla_targets.rs  spec_hardening.rs  spec_scenarios.rs  stress_tests.rs
docs/: quickstart.md
docs/public/: SCENARIOS-AGENTIC-COMM.md  api-reference.md  architecture.md  benchmarks.md  cli-reference.md  command-surface.md  concepts.md  configuration.md  data-structures.md  experience-with-vs-without.md  faq.md  ffi-reference.md  file-format.md  guide.md  implementation-2026-02-22.md  initial-problem-coverage.md  installation.md  integration-guide.md  mcp-prompts.md  mcp-resources.md  mcp-tools.md  multi-agent-coordination.md  notifier-runtime-roadmap.md  overview.md  playbooks-agent-integration.md  primary-problem-coverage.md  quickstart.md  runtime-install-sync.md  sister.manifest.json  troubleshooting.md
examples/: README.md  pubsub-fanout-recipient-delivery.sh
installer/acomm_installer/: install.sh
npm/wasm/: Cargo.toml
npm/wasm/pkg/: package.json
npm/wasm/src/: lib.rs
paper/paper-i-agentic-communication/: paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
planning-docs/: AGENTIC-COMM-22-INVENTIONS.md  AGENTIC-COMM-SPEC-PART1.md  AGENTIC-COMM-SPEC-PART2.md  AGENTIC-COMM-SPEC-PART3.md  AGENTIC-COMM-SPEC-PART4.md
python/: README.md  pyproject.toml
python/src/agentic_comm/: __init__.py  cli_bridge.py  errors.py  models.py  store.py
python/tests/: conftest.py  test_imports.py
scripts/: check-canonical-sister.sh  check-install-commands.sh  check-runtime-hardening.sh  install.sh  publish.sh  test-primary-problems.sh
