[workspace]
resolver = "2"
members = [
    "crates/agentic-comm",
    "crates/agentic-comm-cli",
    "crates/agentic-comm-mcp",
    "crates/agentic-comm-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/agentralabs/agentic-comm"
authors = ["Agentra Labs <contact@agentralabs.tech>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
sha2 = "0.10"
bincode = "1"
flate2 = "1"
zstd = "0.13"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
crc32fast = "1.3"
blake3 = "1"
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
clap = { version = "4", features = ["derive"] }
agentic-sdk = "0.2.0"

# Internal crates
agentic-comm = { path = "crates/agentic-comm", version = "0.1.0" }
agentic-comm-mcp = { path = "crates/agentic-comm-mcp", version = "0.1.0" }
agentic-comm-cli = { path = "crates/agentic-comm-cli", version = "0.1.0" }
agentic-comm-ffi = { path = "crates/agentic-comm-ffi", version = "0.1.0" }
