[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentic-comm"
version = "0.1.0"
description = "Python bindings for AgenticComm — agent-to-agent communication engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Agentra Labs" },
]
keywords = ["ai", "agent", "communication", "messaging", "pubsub"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/agentralabs/agentic-comm"
Documentation = "https://github.com/agentralabs/agentic-comm/tree/main/docs"
Repository = "https://github.com/agentralabs/agentic-comm"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_comm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
