[package]
name = "agentic-comm-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "C-compatible FFI bindings for agentic-comm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
agentic-comm = { workspace = true }
serde_json = { workspace = true }
