[package]
name = "agentic-comm-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server for agentic-comm: agent communication over JSON-RPC"

[[bin]]
name = "agentic-comm-mcp"
path = "src/main.rs"

[dependencies]
agentic-comm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
