[package]
name = "agentic-comm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent-to-agent and agent-to-human communication engine with channels, pub/sub, and message routing"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
