[package]
name = "agentic-comm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Agent-to-agent and agent-to-human communication engine with channels, pub/sub, and message routing"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
fs2 = "0.4"
crc32fast = { workspace = true }
blake3 = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
ed25519-dalek = { workspace = true }
agentic-sdk = { workspace = true }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "comm_benchmarks"
harness = false

[[bench]]
name = "cli_bench"
harness = false

[[bench]]
name = "mcp_bench"
harness = false

[[bench]]
name = "stress_bench"
harness = false
